--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" android:background="#BD8A8A">
+        android:orientation="vertical">
 
     <androidx.camera.view.PreviewView
             android:id="@+id/viewFinder"
@@ -33,7 +33,8 @@
             app:pressedTranslationZ="0dp"
             app:srcCompat="@drawable/icon_flash_off"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+    />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/back_buttons"
@@ -42,19 +43,22 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+    />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             style="@style/camera_buttons"
             android:src="@android:drawable/ic_menu_sort_by_size"
-            android:id="@+id/btn_menu"
+            android:id="@+id/btn_save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:backgroundTint="#000000"
             app:elevation="0dp"
             app:pressedTranslationZ="0dp"
             app:borderWidth="2dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+    />
+
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
@@ -67,6 +71,7 @@
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:background="#1C42D1"/>
+            android:background="#1C42D1"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
