--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -9,37 +10,49 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.3">
+                android:layout_weight="0.3"
+        >
             <TextView
                     android:text="Количество кодов для связывания"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+            />
         </LinearLayout>
+
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.7">
+                android:layout_weight="0.7"
+        >
             <EditText
                     android:text="1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/et_numberOfCodes"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+            />
         </LinearLayout>
     </LinearLayout>
+
     <Button
             android:text="Start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_start"
             android:layout_gravity="center_horizontal"
-            android:backgroundTint="#023CAF"/>
-</LinearLayout>
+            android:backgroundTint="#023CAF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="60dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
