добавлена активность с настройками приложения

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,13 @@
         <item name="android:backgroundTint">#340055FF</item>
         <item name="android:layout_marginBottom">8dp</item>
     </style>
+    <style name="setting_buttons">
+        <item name="android:layout_width">wrap_content</item>>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">true</item>
+        <item name="android:backgroundTint">#34FFFFFF</item>
+        <item name="android:layout_marginBottom">8dp</item>
+    </style>
     <style name="back_buttons"
            parent="Widget.Design.FloatingActionButton">
         <item name="android:src">@drawable/icon_back</item>
