--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,44 +6,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical">
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
-
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.3"
-        >
-            <TextView
-                    android:text="Количество кодов для связывания"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-            />
-        </LinearLayout>
-
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.7"
-        >
-            <EditText
-                    android:text="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/et_numberOfCodes"
-                    android:textSize="16sp"
-            />
-        </LinearLayout>
-    </LinearLayout>
 
     <Button
             android:text="Start"
@@ -54,5 +16,21 @@
             android:backgroundTint="#023CAF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="60dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="60dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            style="@style/setting_buttons"
+            android:src="@drawable/icon_settings"
+            android:id="@+id/btn_settings"
+            app:backgroundTint="#000000"
+            app:elevation="0dp"
+            app:pressedTranslationZ="0dp"
+            app:borderWidth="0.5dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="24dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
