--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,33 +6,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/linearLayout">
+        <TextView
+                android:id="@+id/tv_info"
+                style="@style/listitem_fields"
+                android:text="Text"
+        />
+        <TextView
+                android:id="@+id/tv_gtin"
+                style="@style/listitem_fields"
+                android:text="Text"
+        />
+    </LinearLayout>
+
     <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/id_tv"
-            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/tv_counter"
+            style="@style/listitem_fields"
+            android:text="0/0"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="16sp"
-            android:textColor="#000000"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/linearLayout"/>
 
-    <TextView
-            style="@style/listitem_partsofcode"
-            android:text="TextView"
-            android:id="@+id/firstPart_tv"
-            app:layout_constraintTop_toBottomOf="@id/id_tv"/>
-
-    <TextView
-            style="@style/listitem_partsofcode"
-            android:text="TextView"
-            android:id="@+id/secondPart_tv"
-            tools:layout_editor_absoluteX="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/firstPart_tv"/>
-
-    <TextView
-            style="@style/listitem_partsofcode"
-            android:text="TextView"
-            android:id="@+id/thirdPart_tv"
-            tools:layout_editor_absoluteX="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/secondPart_tv"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
