--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,8 +27,8 @@
         <item name="fabSize">normal</item>
         <item name="maxImageSize">55dp</item>
     </style>
-    <style name="listitem_partsofcode">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="listitem_fields">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">20sp</item>
