--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center_vertical">
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
-
-    <Button
-            android:text="Начать"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_start"
-            android:layout_gravity="center_horizontal"
-            android:backgroundTint="#023CAF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="60dp"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            style="@style/setting_buttons"
-            android:src="@drawable/icon_settings"
-            android:id="@+id/btn_settings"
-            app:backgroundTint="#000000"
-            app:elevation="0dp"
-            app:pressedTranslationZ="0dp"
-            app:borderWidth="0.5dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp"/>
-    <Button
-            android:id="@+id/btn_load"
-            android:text="Проверить"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="110dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-    />
-
-    <ScrollView
-            android:id="@+id/sv_task"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:fillViewport="true"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_settings"
-            app:layout_constraintBottom_toTopOf="@+id/btn_load"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp">
-
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/tv_id"
-                    android:text="Нет заявок для выполнения."
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"/>
-
-            <TextView
-                    android:id="@+id/tv_task"
-                    android:text="Нажмите кнопку для проверки."
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
-    </ScrollView>
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
