--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,6 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ListFragment">
 
+    <TextView
+        android:id="@+id/task_tv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <ListView
         android:id="@+id/codeData_lv"
         android:layout_width="0dp"
@@ -14,10 +23,11 @@
         android:background="#FFFFFF"
         android:cacheColorHint="#000000"
         android:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
     <Button
         android:text="Отправить"
         android:layout_width="wrap_content"
