--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -16,8 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <ListView
-        android:id="@+id/codeData_lv"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/codeData_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#FFFFFF"
